less and less generics warnings
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/trunk@8721 28e8926c-6b08-0410-baaa-805c5e19b8d6